# fcrypt

./: .gitignore  AUTHORS  Makefile.am  README  Vagrantfile  bootstrap.sh  configure.ac
.github/workflows/: autotools-multiplatform.yml
docs/: block-modes.md  des.md  dev-env-setup.md  otp.md  random.md  rc4.md
m4/: ax_find_indent.m4  ax_no_insource.m4
src/: Makefile.am  fcrypt.c  main.c
src/crypt/: Makefile.am  block.c  des.c  rand.c  stream.c
src/crypt/include/crypt/: block.h  des.h  rand.h  stream.h
src/include/: fcrypt.h
tests/: Makefile.am  check_fcrypt.c
tests/crypt/: check_cbc.c  check_cfb.c  check_des.c  check_ecb.c  check_ofb.c  check_otp.c  check_randgen.c  check_rc4.c  check_tdea.c
